requirements.txt fixed

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ gunicorn==21.2.0
 packaging==23.1
 Pillow==10.0.1
 psycopg2==2.9.6
+python-decouple==3.8
 sqlparse==0.4.4
 typing_extensions==4.8.0
 tzdata==2023.3
