--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 asgiref==3.7.2
 dj-database-url==2.1.0
-Django==4.2.5
+Django
 gunicorn==21.2.0
 packaging==23.1
-Pillow==10.0.1
+Pillow
 psycopg2==2.9.6
 python-decouple==3.8
 sqlparse==0.4.4
-typing_extensions==4.8.0
+typing_extensions
 tzdata==2023.3
 whitenoise==6.5.0
